Changes for 1.1alpha5:

 - added frontends/image.php (Alexei)
 - added table 'hosts_templates' (Alexei)
 - added table 'escalations' (Alexei)
 - selection of configuration areas in config.php (Alexei)

Changes for 1.1alpha4:

 - fixed problem with blank graphs (Alexei)
 - support of plain text value for screens (Alexei)
 - fixed parsing of command line parameters. Thanks to Slix. (Alexei)
 - added special item zabbix[log] (Alexei)
 - calculate items.nextcheck as nextcheck+delay (Alexei)
 - fixed time navigation for user-defined graphs (Alexei)
 - added link to ZABBIX manual from all forms (Alexei)
 - icmppingsec to return '0' if cannot ping (Alexei)
 - added error reason for unsupported items (Alexei)
 - added error reason for unreachable hosts (Alexei)
 - added hosts.error (Alexei)
 - added items.error (Alexei)
 - added alerts.error (Alexei)
 - added error reason for undelivered alerts (Alexei)
 - added upgrades/dbpatches/1.1alpha3_to_1.1alpha4 (Alexei)
 - fixed empty macros in alert messages if '.' in key (Alexei)
 - do not show menu item if no permissions (Alexei)

Changes for 1.1alpha3:

 - fixed wrong use of multiplier for items (Alexei)
 - remover src/zabbix_sucker and src/zabbix_trapper (Alexei)
 - one common process for sucker and trapper: zabbix_server (Alexei)
 - removed column items.lastdelete (Alexei)
 - do not use items.lastdelete in housekeeping process (Alexei)
 - do not draw straight lines in graphs if no data (Alexei)
 - fixes for PHP5 (Alexei)
 - fix for crash of zabbix_suckerd (Alexei)

Changes for 1.1alpha2:

 - support for cpu[idleX], cpu[userX], cpu[niceX], cpu[systemX] (Alexei)
 - fix for custom multiplier (Alexei)
 - use checkbox instead of lists in users.php (Alexei)
 - removed thread-related configuration options from configure.in (Alexei)
 - fixed audit log for graph elements (Alexei)
 - do not reference ZABBIX logo from www.zabbix.com (Alexei)
 - fixed addition of network maps (Alexei)

Changes for 1.1alpha1:
